minor factoring, changed idea-card width to 85%

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section id="idea-list">
       <input type="text" name="search" placeholder="Search" class="search-input submit"></input>
 
-      <!-- <div class="idea-card">
+      <div class="idea-card">
           <h2>Idea 1</h2>
           <p>some text</p>
           <div class="quality">
@@ -30,7 +30,7 @@
             <img src="" alt="">
             <h3 class="quality">quality: <span class="quality-name">swill</span></h3>
           </div>
-      </div> -->
+      </div>
 
     </section>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
