First stab at JS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1>idea<span>box</span></h1>
       <form>
         <input type="text" name="title" class="title-input submit" placeholder="Title"></input>
-        <textarea type="text" name="body" class="body-input submit" placeholder="Bodice" rows="3"></textarea>
+        <textarea type="text" name="body" class="body-input submit" placeholder="Body" rows="3"></textarea>
         <input type="button" name="save" class="save-button submit" value="save"></input>
       </form>
     </section>
