Set up local storage and idea cards

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
         <input type="button" name="save" class="save-button submit" value="save"></input>
       </form>
     </section>
-
-    <section id="idea-list">
+    <section class="search-container">
       <input type="text" name="search" placeholder="Search" class="search-input submit"></input>
+    </section>
+    <section id="idea-list">
 
-      <div class="idea-card">
+      <!-- <div class="idea-card">
           <h2>Idea 1</h2>
           <p>some text</p>
           <div class="quality">
@@ -30,7 +31,7 @@
             <img src="" alt="">
             <h3 class="quality">quality: <span class="quality-name">swill</span></h3>
           </div>
-      </div>
+      </div> -->
 
     </section>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
